# resonate

./: Cargo.toml  README.md  ]  windows_dependencies.bat
src/: application.rs  audio.rs  downloader.rs  filemanager.rs  main.rs  music.rs  utility.rs  widgets.rs
