[package]
name = "resonate"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "6.0.0"
iced = { version = "0.13.1", features = ["tokio", "advanced"] }
rand = "0.9.0"
rfd = "0.15.2"
rodio = { version = "0.20.1", features = ["symphonia-all"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
thirtyfour_sync = "0.27.1"
tokio = "1.43.0"
